# grpc-cpp-demo

./: CMakeLists.txt  Makefile
cmake/: FindGRPC.cmake
protos/: mathtest.proto
src/: MathService.cpp  MathService.h  client.cc  server.cc
